file(GLOB PLAYERAPP_HEADER inc/*.h)
file(GLOB PLAYERAPP_SOURCE src/*.cxx)

add_executable(OmegaPlayerApp ${PLAYERAPP_HEADER} ${PLAYERAPP_SOURCE} )

if(OMEGA_MSVC16)
    target_compile_options(OmegaPlayerApp PRIVATE "/MP")
endif (OMEGA_MSVC16)

if (OMEGA_WIN32)
    target_link_libraries(OmegaPlayerApp audioio blackomega blueomega common cyanomega engine greenomega toneomega wavpackomega network_omega redomega mime silveromega trackdb trackinfo violetomega whiteomega playercommon remote widget xml2 ${QTVER}::Core ${QTVER}::Gui ${QTVER}::Quick ${QTVER}::Qml winmm ws2_32 wavpack)
elseif (OMEGA_MACOSX)
    if (OMEGA_QT4)
        target_include_directories(OmegaPlayerApp PRIVATE "${BLACKOMEGA_PREFIX}/include/QJson4")
        target_link_libraries(OmegaPlayerApp audioio blackomega blueomega common cyanomega engine greenomega toneomega wavpackomega network_omega redomega mime silveromega trackdb trackinfo violetomega whiteomega playercommon remote widget xml2 ${QTVER}::QtCore ${QTVER}::QtGui QJson4 wavpack ${COCOA_FRAMEWORK_UNIT} ${APPKIT_FRAMEWORK_UNIT} ${IOKIT_FRAMEWORK_UNIT} ${SPARKLE_FRAMEWORK})
    else (OMEGA_QT4)
        target_link_libraries(OmegaPlayerApp audioio blackomega blueomega common cyanomega engine greenomega toneomega wavpackomega network_omega redomega mime silveromega trackdb trackinfo violetomega whiteomega playercommon remote widget xml2 ${QTVER}::Core ${QTVER}::Gui ${QTVER}::Quick ${QTVER}::Qml wavpack ${COCOA_FRAMEWORK_UNIT} ${APPKIT_FRAMEWORK_UNIT} ${IOKIT_FRAMEWORK_UNIT} ${SPARKLE_FRAMEWORK})
    endif (OMEGA_QT4)
elseif (OMEGA_LINUX)
    target_link_libraries(OmegaPlayerApp audioio blackomega blueomega common cyanomega engine greenomega toneomega wavpackomega network_omega redomega mime silveromega trackdb trackinfo violetomega whiteomega playercommon remote widget xml2 ${QTVER}::Core ${QTVER}::Gui ${QTVER}::Quick ${QTVER}::Qml wavpack ${LIBUPNP_LIBRARIES} )
endif (OMEGA_WIN32)

if (${TIGER_SYSTEM_DEPS})
    install(TARGETS OmegaPlayerApp DESTINATION bin)
endif (${TIGER_SYSTEM_DEPS})
